--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -31,3 +31,9 @@
     text-align: top;
     vertical-align:top;
 }
+
+.uppertext {
+  text-transform: uppercase;
+  font-size: 10px;
+  font-weight: 300;
+}
