--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,8 +19,11 @@
       <div class="inner">
 
         <header>
-          <h1>{{ page.title | default: site.title | default: site.github.repository_name }}</h1>
-          <h2>{{ page.description | default: site.description | default: site.github.project_tagline }}</h2>
+          <div class="col-block-small"><img class="incircle" src="img/TashProfile.png"/></div>
+          <div class="col-block">
+            <h1>{{ page.title | default: site.title | default: site.github.repository_name }}</h1>
+            <h2 class="uppertext">{{ page.description | default: site.description | default: site.github.project_tagline }}</h2>
+          </div>
         </header>
         <hr>
         <section id="main_content">
